static/receita.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');




* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color: rgb(12, 12, 12);
    /* font-family: Josefin Sans;*/
    font-family: 'Poppins', sans-serif;
    font-size: 1.2rem;
    text-decoration: none;
    /*     font-weight: 500; */

}



:root {
    --primary-color: #d57119;
    --secondary-color: #57B894;
    --black: #000000;
    --white: #ffffff;
    --gray: #969696;
    --gray-2: #d3d3d3;
    --card--: #FCF3E5;
    --check--: #fac08d;
    --dark--: #222;
    --darkform--: #5c5c5c;




    --facebook-color: #4267B2;
    --google-color: #DB4437;
    --twitter-color: #1DA1F2;
    --insta-color: #E1306C;
}


body {
    width: 100%;
    height: 100%;
    background: var(--white);

}

body.modo-escuro {
    background-color: #222;
    color: #fff;
}


body.modo-escuro label {
    color: #fff;

}



body.modo-escuro p {
    color: var(--white--);
}

body.modo-escuro .navbar-nav .nav-link.active, .navbar-nav .nav-link.show   {
     color: var(--white--);
}



body.modo-escuro .container-fluid{
    display: flex;
    align-items: center;
    justify-content: right;
    background-color: var(--dark--);
    flex-direction: row;
}


body.modo-escuro .bg-body-tertiary{
    --bs-bg-opacity:0
}


.nav-item{
    display: flex;
    justify-content: center;
}





body.modo-escuro header {

    text-align: center;
    margin-bottom: 3rem;

}




.card {
    background-color: #ac2020;
    color: #000000;
}

body.modo-escuro h1{
    color: var(--white);
}
body.modo-escuro li{
    color: var(--white);
}


body.modo-escuro h3{
    color: var(--white);
}


body.modo-escuro .d-block{
    width: 40rem;
    height: 20rem;
}



body.modo-escuro footer p {
    color: #fff;

}



header {

    text-align: center;
    margin-bottom: 3rem;

}


 #menu{
    display: flex;
    justify-content: right;

 }

 .container-fluid {
    display: flex;
    align-items: center;
    flex-wrap: inherit;
    justify-content: right;

    flex-direction: row;
}




.bg-body-tertiary{
    --bs-bg-opacity:0
}




#acesso {
    cursor: pointer;
    width: 8.5rem;
    border: none;
    border-radius: .5rem;
    background-color: var(--primary-color);
    color: var(--white);
    font-size: 0.7rem;
    outline: none;
    height: 2rem;
    margin: 15px;
    text-align: center;
}

#acesso:hover {
    background-color: #a33f37;
}


.logotipo{
    display: flex;
    justify-content: center;
}

#logo img {
    display: flex;
    width: 12rem;
    height: 5rem;
    align-items: center;
    justify-content: center;
    margin-top: 10px;
}



#acesso:hover {
    background-color: #a33f37;
}


svg {
    width: 40px;
    height: 25px;
}

.bntacesso {

    display: flex;
    flex-direction: row;
}

#toggle-mode {
    display: flex;
    align-items: center;
    gap: 10px;
    justify-content: center;

}

#toggle-mode label {
    font-size: 0.8rem;
}


.navbar-toggler {
    display: flex;
    background-color: var(--white);
    justify-content: right;
}


.btn-outline-success{
    background-color: var(--primary-color);
    color: var(--white);
    border-color: var(--primary-color);

}

.navbar>.container-fluid{
    display: flex;
    flex-wrap: inherit;
    align-items: center;
    justify-content: right;
}

h1{
    text-align: center;
    font-size: 2rem;
}

h3{
    font-size: 1.5rem;
    text-align: center;
}




section{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    padding-left: 15%;
    padding-right: 15%;
}

.d-block{
    width: 40rem;
    height: 20rem;
}


.carousel-inner {
    position: relative;
    width: auto;
    overflow: hidden;
}

#carouselExample{
    display: flex;
    width: 50%;
    height: 50%;
    justify-content: center;
    margin-top: 2%;
    flex-direction: column;
    align-items: center;
   

}


.rating:not(:checked) > input {
    position: absolute;
    appearance: none;
  }
  
  .rating:not(:checked) > label {
    float: right;
    cursor: pointer;
    font-size: 30px;
    color: #666;

  }
  
  .rating:not(:checked) > label:before {
    content: '★';
  }
  
  .rating > input:checked + label:hover,
  .rating > input:checked + label:hover ~ label,
  .rating > input:checked ~ label:hover,
  .rating > input:checked ~ label:hover ~ label,
  .rating > label:hover ~ input:checked ~ label {
    color: #e58e09;
  }
  
  .rating:not(:checked) > label:hover,
  .rating:not(:checked) > label:hover ~ label {
    color: #ff9e0b;
  }
  
  .rating > input:checked ~ label {
    color: #ffa723;
  }
  
  
  
  .ingredientes{
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    padding-bottom: 5rem;

  }

  .ingredientes li{
    display: flex;
    flex-direction: column;
    justify-content: left;
    text-align: left;
    font-size: 0.8rem;
    padding: 0.5rem;

  }


  .categoria{
    margin-left: 15%;
    margin-right: 15%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    align-items: center;

  }

  
  .categoria h3{
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    padding: 2rem;


  }

  .preparo{
    display: flex;
    justify-content: center;
    text-align: left;
    flex-direction: row;
    margin-right: 20%;
    margin-left: 20%;
    font-size: 0.8rem;
  }

  .preparo li{
    padding: 0.5rem;
    font-size: 0.8rem;


  }



 


  .video{
    display: flex;
    justify-content: center;
    padding-left: 20%;
    padding-right: 20%;
    height: 25rem;
    margin-top: 2rem;

  }

  iframe{
    width: 60rem;
    height: 30rem;
  }


  .tempo{
    display: flex;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    margin-left: 20%;
    margin-right: 20%;
    font-size: 0.8rem;
    padding-top: 8rem;


    
  }




  
#myBtn {
    display: flex;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 9999;
    border: none;
    outline: none;
    background:none;
/*     background: var(--check--); ativar penas para teste */

/*  color: white; */ 
    cursor: pointer;
/*     border-radius: 10px; */


/* 
    box-shadow:  0 0 0 0 var(--check--);
    border-radius: 50%;
    animation: alerta 1.5s infinite;
    transition: background, padding 500ms ease-in-out;   */

}




  

  #myBtn {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;



    -webkit-animation-name: btn-pulsando;
    animation-name: btn-pulsando;
    -webkit-animation-duration: 1.5s;
    animation-duration: 1.5s;
    -webkit-animation-timing-function: ease-in-out;
    animation-timing-function: ease-in-out;
    -webkit-animation-iteration-count: infinite;
    animation-iteration-count: infinite;
  }



  @-webkit-keyframes btn-pulsando {
    0% {
      -webkit-transform: scale(1);
      transform: scale(1);
    }
    50% {
      -webkit-transform: scale(0.95);
      transform: scale(0.95);
    }
    100% {
      -webkit-transform: scale(1);
      transform: scale(1);
    }
  }
  
  @keyframes btn-pulsando {
    0% {
      -webkit-transform: scale(1.2);
      transform: scale(1.2);
    }
    50% {
      -webkit-transform: scale(1);
      transform: scale(1);
    }
    100% {
      -webkit-transform: scale(1.2);
      transform: scale(1.2);
    }
  }




footer {


    bottom: 0;
    width: 100%;
    text-align: center;
    left: 0;
}

footer p {
    font-size: 0.8rem;
}


::-webkit-scrollbar {
    width: 7px;
}

::-webkit-scrollbar-track {
    border-radius: 5px;
    background-color: rgb(0, 0, 0);
}

::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: var(--primary-color);
}






@media only screen and (max-width: 940px) {
    .btn-outline-success{
        justify-content: right;
    }

    body.modo-escuro .container-fluid {
        display: flex;
        align-items: center;
        justify-content: right;
        background-color: var(--dark--);
        flex-direction: row;
    }

    .modo-escuro .btn-outline-success{
        justify-content: right;
    }

    .container-fluid {
        display: flex;
        align-items: center;
        justify-content: right;
        flex-direction: row;
    }

    .container-flex-properties {
        display: flex;
        flex-wrap: inherit;
        align-items: center;
        justify-content: right;
      }

}


@media only screen and (max-width: 768px) {
    section{
        flex-direction: column;
        padding: 1rem;

    }

    #carouselExample{
        width: 100%;

    }


    .preparo {
        flex-direction: column;
    
       
    }

    .ingredientes{
        padding-bottom: 1rem;
    }


    .categoria h3{
        justify-content: center;
        padding-bottom: 2rem;
        width: 100%;
    }


    .video{
        display: flex;
        justify-content: center;
        padding-left: 5%;
        padding-right: 5%;
        height: 12rem;
        margin-top: 2rem;
        width: 100%;
    
      }
    
      iframe{
        width: 60rem;
        height: 10rem;
        
      }


      .tempo{
        display: flex;
        justify-content: center;
        text-align: center;
        flex-direction: column;
        margin-left: 20%;
        margin-right: 20%;
        font-size: 0.8rem;
        padding-top: 2rem;
    
      }



}

